<resources>
    <string name="app_name">homework3</string>
    <string name="feb_10_2016">FEB 10 2016</string>
    <string name="interview_at_google">Interview at google</string>
    <string name="_12_30">12:30PM</string>
    <string name="pick_up_the_kids">Pick up the kids</string>
    <string name="_4_30pm">4:30PM</string>
    <string name="feb_9_2016">FEB 9 2016</string>
    <string name="brain_s_birthday_party">Brain\'s birthday party</string>
    <string name="_7_00pm">7:00PM</string>
    <string name="first_project_due_and_start_second_project">First project due and start second project</string>
    <string name="_9_30pm">9:30PM</string>
    <string name="feb_6_2016">FEB 6 2016</string>
    <string name="finish_first_iteration_before_sleep">Finish first iteration before sleep</string>
    <string name="_9_00pm">9:00PM</string>
    <string name="dinner_at_partycity">Dinner at partycity</string>
    <string name="bring_laptop_to_the_meeting">Bring laptop to the meeting</string>
    <string name="_8_00pm">8:00PM</string>
    <string name="leg_day">Leg day</string>
    <string name="_6_00pm">6:00PM</string>
</resources>