<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/date1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/feb_10_2016"
            android:textStyle="bold"

            />
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/reminder1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:padding="20dp"
                    android:text="@string/interview_at_google" />

                <RadioButton
                    android:id="@+id/radioButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/reminder1"
                    android:layout_alignEnd="@id/reminder1"
                    android:layout_alignParentEnd="true"
                    android:layoutDirection="rtl"
                    android:buttonTint="@color/GreenRadioButton"
                    android:text="@string/_12_30" />

                <TextView
                    android:id="@+id/reminder2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/reminder1"
                    android:ems="10"
                    android:padding="20dp"
                    android:text="@string/pick_up_the_kids" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/reminder2"
                    android:layout_alignEnd="@id/reminder1"
                    android:layout_alignParentEnd="true"
                    android:layoutDirection="rtl"
                    android:buttonTint="@color/GreenRadioButton"
                    android:text="@string/_4_30pm" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/date2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/feb_9_2016"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/reminder3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:text="@string/brain_s_birthday_party" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/reminder3"
                    android:layout_alignEnd="@id/reminder3"
                    android:layout_alignParentEnd="true"
                    android:layoutDirection="rtl"
                    android:buttonTint="@color/GreenRadioButton"
                    android:text="@string/_7_00pm" />

                <TextView
                    android:id="@+id/reminder4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/reminder3"
                    android:padding="20dp"
                    android:text="@string/first_project_due_and_start_second_project"
                    android:ems="10"/>

                <RadioButton
                    android:id="@+id/radioButton4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/reminder4"
                    android:layout_alignEnd="@id/reminder4"
                    android:layout_alignParentEnd="true"
                    android:layoutDirection="rtl"
                    android:buttonTint="@color/GreenRadioButton"
                    android:text="@string/_9_30pm" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/date3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/feb_6_2016"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/cardid1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/reminder5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:text="@string/finish_first_iteration_before_sleep"
                    android:ems="10"/>

                <RadioButton
                    android:id="@+id/radioButton5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/reminder5"
                    android:checked="true"
                    android:layout_alignEnd="@id/reminder5"
                    android:alpha="0.3"
                    android:layout_alignParentEnd="true"
                    android:layoutDirection="rtl"
                    android:buttonTint="@color/GreenRadioButton"
                    android:text="@string/_9_00pm" />

                <TextView
                    android:id="@+id/reminder6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/reminder5"
                    android:ems="10"
                    android:padding="20dp"
                    android:text="@string/dinner_at_partycity" />

                <RadioButton
                    android:id="@+id/radioButton6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:layout_alignBaseline="@id/reminder6"
                    android:layout_alignEnd="@id/reminder6"
                    android:layout_alignParentEnd="true"
                    android:buttonTint="@color/GreenRadioButton"
                    android:alpha="0.3"
                    android:layoutDirection="rtl"
                    android:text="@string/_7_00pm" />

                <TextView
                    android:id="@+id/reminder7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/reminder6"
                    android:padding="20dp"
                    android:text="@string/bring_laptop_to_the_meeting" />

                <RadioButton
                    android:id="@+id/radioButton7"
                    android:layout_width="wrap_content"
                    android:checked="true"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/reminder7"
                    android:alpha="0.3"
                    android:layout_alignEnd="@id/reminder7"
                    android:layout_alignParentEnd="true"
                    android:layoutDirection="rtl"
                    android:buttonTint="@color/GreenRadioButton"
                    android:text="@string/_8_00pm" />

                <TextView
                    android:id="@+id/reminder8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/reminder7"
                    android:padding="20dp"
                    android:text="@string/leg_day" />

                <RadioButton
                    android:id="@+id/radioButton8"
                    android:checked="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/reminder8"
                    android:alpha="0.3"
                    android:layout_alignEnd="@id/reminder8"
                    android:layout_alignParentEnd="true"
                    android:buttonTint="@color/GreenRadioButton"
                    android:layoutDirection="rtl"
                    android:text="@string/_6_00pm" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/date4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:padding="20dp"
            android:text="@string/feb_6_2016"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cardid2">

                <TextView
                    android:id="@+id/reminder9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:ems="10"
                    android:text="@string/finish_first_iteration_before_sleep" />

                <RadioButton
                    android:id="@+id/radioButton9"
                    android:checked="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/reminder9"
                    android:alpha="0.3"
                    android:layout_alignEnd="@id/reminder9"
                    android:layout_alignParentEnd="true"
                    android:layoutDirection="rtl"
                    android:buttonTint="@color/GreenRadioButton"
                    android:text="@string/_9_00pm" />

                <TextView
                    android:id="@+id/reminder10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/reminder9"
                    android:ems="10"
                    android:padding="20dp"
                    android:text="@string/dinner_at_partycity" />

                <RadioButton
                    android:id="@+id/radioButton10"
                    android:checked="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/reminder10"
                    android:layout_alignEnd="@id/reminder10"
                    android:layout_alignParentEnd="true"
                    android:alpha="0.3"
                    android:layoutDirection="rtl"
                    android:buttonTint="@color/GreenRadioButton"
                    android:text="@string/_7_00pm" />

                <TextView
                    android:id="@+id/reminder11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/reminder10"
                    android:padding="20dp"
                    android:text="@string/bring_laptop_to_the_meeting" />

                <RadioButton
                    android:id="@+id/radioButton11"
                    android:checked="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/reminder11"
                    android:layout_alignEnd="@id/reminder11"
                    android:layout_alignParentEnd="true"
                    android:alpha="0.3"
                    android:layoutDirection="rtl"
                    android:buttonTint="@color/GreenRadioButton"
                    android:text="@string/_8_00pm" />

                <TextView
                    android:id="@+id/reminder12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/reminder11"
                    android:padding="20dp"
                    android:text="@string/leg_day" />

                <RadioButton
                    android:checked="true"
                    android:id="@+id/radioButton12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.3"
                    android:layout_alignBaseline="@id/reminder12"
                    android:layout_alignEnd="@id/reminder12"
                    android:layout_alignParentEnd="true"
                    android:layoutDirection="rtl"
                    android:buttonTint="@color/GreenRadioButton"
                    android:text="@string/_6_00pm" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>